Fix whitespace on small screens, nav re-aligned

--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -81,6 +81,16 @@ p {
     line-height: 2.8rem;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+blockquote {
+    overflow: visible;
+}
+
 h3 {
     font-weight: bold;
     letter-spacing: .2rem;
@@ -107,6 +117,10 @@ a {
 a:hover {
     text-decoration: none;
     color: #ce6a00;
+}
+
+blockquote {
+    overflow: visible;
 }
 
 .uppercase {
@@ -598,8 +612,8 @@ blockquote::after {
 .artist-image {
     display: block;
     width: 100%;
-    height: 50rem;
-    margin: 4.5rem 0 0 0;
+    height: 35rem;
+    margin: 4.5rem 0 1.5rem 0;
     position: relative;
 }
 
@@ -809,8 +823,8 @@ blockquote::after {
     }
 
     .artist-image {
-        height: 40rem;
-        margin-bottom: 1.5rem;
+        height: 30rem;
+        margin-bottom: 1rem;
     }
 
     #ae-mak {
@@ -818,7 +832,7 @@ blockquote::after {
     }
 
     #fionn-lynch {
-        margin: 12rem 0 13.2rem 0;
+        margin: 12rem 0 2.8rem 0;
     }
 
     #top-shelf {
@@ -964,31 +978,29 @@ blockquote::after {
     }
 
     /* Navigation */
+    .sidebar {
+        display: none;
+    }
+    
     .navbar {
         height: 9rem;
+        align-items: center;;
     }
 
     .logo {
         margin: 0 1rem;
-
     }
     
     .navbar #horizontal-nav {
         display: inline-block;
+        height: !00%;
+        justify-content: center;
+        margin-bottom: 0;
+        align-items: center;
     }
 
     .navbar button.openbtn {
         display: none;
-    }
-
-    .sidebar {
-        display: none;
-    }
-
-    #horizontal-nav {
-        justify-content: center;
-        margin-bottom: 0;
-        
     }
 
     nav ul li a {
@@ -998,8 +1010,8 @@ blockquote::after {
         letter-spacing: .2rem;
         text-transform: uppercase;
         padding: .75rem 1rem;
-        line-height: 4.4rem;
         margin-right: .8rem;
+        display: inline-block;
     }
     
     nav ul li a:hover {
@@ -1009,9 +1021,10 @@ blockquote::after {
     .nav-cta {
         border: #fff .2rem solid;
         border-radius: .3rem;
-        padding: 2rem;
+        padding: 1rem 1.5rem;
         transition: all .25s;
-        line-height: 0;
+        overflow: visible;
+        line-height: 1.5rem;
     }
     
     nav ul li a.nav-cta:hover {
